fix spacings and add dark mode colors

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -7,7 +7,7 @@
 
 .horizontalcardswrapper{
   display: grid;
-  grid-template-rows: 1fr 0.80fr 0.46fr;
+  /*grid-template-rows: 0.5fr 0.80fr 0.46fr;*/
 }
 
 .ptitlesub{
@@ -43,11 +43,11 @@ li {
 }
 
 .white.clickable {
-    background-color: rgb(212, 241, 255);
+    background-color: var(--whiteclickable);
 }
 
 .white.clickable:hover {
-    background-color: rgb(178, 207, 221);
+    background-color: var(--whitehover);
 }
 
 .highlight {
@@ -55,21 +55,21 @@ li {
 }
 
 .green {
-    background-color: rgb(46, 201, 193);
+    background-color: var(--green);
     color: white;
 }
 
 .green.clickable:hover {
-    background-color: rgb(37, 177, 170);
+    background-color: var(--greenhover);
 }
 
 .orange {
-    background-color:rgb(252, 157, 120);
+    background-color:var(--orange);
     color: white;
 }
 
 .orange.clickable:hover {
-    background-color:rgb(221, 122, 82);
+    background-color:var(--orangehover);
 
 }
 
@@ -93,7 +93,6 @@ li {
 .image-container {
     max-width: 1em;
     margin: 0 auto;
-    margin-top: 0.3em;
 }
 
 .image-container img {
@@ -180,7 +179,6 @@ input[type=radio] {
 }
 
 #darkmode2{
-    color: var(--colordarktext);
 }
 
 /* Dropdown Button */
@@ -189,7 +187,7 @@ input[type=radio] {
     font-size: 16px;
     border: none;
     background-color: var(--tabbackground) !important;
-    color: var(--colordarktext)
+    color: var(--colortitle)
 }
 
 /* The container <div> - needed to position the dropdown content */
